deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hacienda-prod
  labels:
    name: hacienda-prod
    environment: production
    istio-injection: enabled
